# rknn-convert

./: .gitignore  Cargo.toml  README.md  config.toml  model.onnx  pyproject.toml
.github/workflows/: CI.yml
rknn_convert/: cli.py
src/: configuration.rs  functions.rs  lib.rs  main.rs  section.rs
src/configuration/: impls.rs  structs.rs
