[package]
name = "rknn-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.3", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
