[package]
name = "rknn-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
stanza = "0.5.2"
toml = { version = "0.9.3", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
