[package]
name = "rknn-convert"
version = "0.1.0"
edition = "2021"

[lib]
name = "rknn_convert_inner"
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
stanza = "0.5.2"
toml = { version = "0.9.3", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
