[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rknn-convert"
requires-python = ">=3.8"
dependencies = [
    "rknn-toolkit2==2.3.2"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
[tool.maturin]
bindings = "bin"
